Bug 144057 - EDITING Hiding tracked changes does not hide entirely deleted table or table rows
Summary: EDITING Hiding tracked changes does not hide entirely deleted table or table ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 inReleaseNotes
Keywords: implementationError
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2021-08-24 14:55 UTC by NISZ LibreOffice Team
Modified: 2021-12-30 05:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (17.32 KB, application/vnd.oasis.opendocument.text)
2021-08-24 14:55 UTC, NISZ LibreOffice Team
Details
Screenshot of the document in Writer with changes shown (76.88 KB, image/png)
2021-08-24 14:55 UTC, NISZ LibreOffice Team
Details
Screenshot of the document in Writer with changes hidden (88.82 KB, image/png)
2021-08-24 14:56 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-08-24 14:55:09 UTC
Created attachment 174517 [details]
Example file from Writer

This is a followup to bug 79069
When a table is deleted via Table – Delete – Table with change tracking enabled and the changes are hidden only the tables text is hidden, the empty table is still visible.

Steps to reproduce:
    1. Open attached document
    2. Turn Edit – Track Changes – Show OFF

Actual results:
The first table is visible, only its deleted contents are hidden.

Expected results:
The first table should be hidden, since accepting the changes would delete it entirely.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3ee22d95d3e1e9ce1d2ff8311e51d600179370f9
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-08-24 14:55:54 UTC
Created attachment 174518 [details]
Screenshot of the document in Writer with changes shown
Comment 2 NISZ LibreOffice Team 2021-08-24 14:56:47 UTC
Created attachment 174519 [details]
Screenshot of the document in Writer with changes hidden
Comment 3 Commit Notification 2021-09-14 10:31:10 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f481c2c8e74bded11fac754e493560391229dbcd

tdf#144057 sw track changes: hide deleted table rows

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2021-10-04 08:40:43 UTC
Verified in: 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 5 stragu 2021-12-30 05:38:35 UTC
Reviewing 7.3 release notes.

Also verified as fixed on Ubuntu 18.04 with:

Version: 7.3.0.1 / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded