tdf#144057 sw track changes: hide deleted table rows

and tables in Hide Changes mode. Previously it was
possible to "hide" them only by accepting all the
deletions, because Hide Changes mode hid only the
cell content, but not the deleted rows and tables,
leaving empty rows and tables in the document.

Follow-up of commit 05366b8e6683363688de8708a3d88cf144c7a2bf
"tdf#60382 sw offapi: add change tracking of table/row deletion".

Change-Id: Ib0424f5a17f2213fc7466e966d8ce6812ffde5e4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122079
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>